--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P320.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P320.xaml
@@ -8,7 +8,7 @@
              xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P320" mc:Ignorable="d"
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid RenderTransformOrigin="0.5,0.5">
+    <Grid RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
         <Grid.RenderTransform>
             <TransformGroup>
                 <ScaleTransform/>
@@ -17,7 +17,7 @@
                 <TranslateTransform/>
             </TransformGroup>
         </Grid.RenderTransform>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="922,489,0,0" VerticalAlignment="Top" Width="99" StatusComponent="320-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.508,0.522" Height="10">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="922,489,0,0" VerticalAlignment="Top" Width="99" StatusComponent="320-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.508,0.522" Height="10" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -27,8 +27,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="183,123,0,0" VerticalAlignment="Top" Width="117" StatusComponent="234-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="233,180,0,0" VerticalAlignment="Top" Width="124" StatusComponent="234-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="183,123,0,0" VerticalAlignment="Top" Width="117" StatusComponent="234-01-MA1" PipeHeight="Medium" d:IsLocked="True"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="233,180,0,0" VerticalAlignment="Top" Width="124" StatusComponent="234-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -38,7 +38,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="983,587,0,0" VerticalAlignment="Top" Width="118" StatusComponent="322-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="983,587,0,0" VerticalAlignment="Top" Width="118" StatusComponent="322-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -48,9 +48,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1037,639,0,0" VerticalAlignment="Top" Width="72" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="14"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="201,273,0,0" VerticalAlignment="Top" Color="Air" Width="73" StatusComponent="268-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="117,467,0,0" VerticalAlignment="Top" Width="356" StatusComponent="268-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1037,639,0,0" VerticalAlignment="Top" Width="72" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="14" d:IsLocked="True"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="201,273,0,0" VerticalAlignment="Top" Color="Air" Width="73" StatusComponent="268-21-CV1" d:IsLocked="True"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="117,467,0,0" VerticalAlignment="Top" Width="356" StatusComponent="268-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -60,7 +60,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="325,371,0,0" VerticalAlignment="Top" Width="247" StatusComponent="269-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="325,371,0,0" VerticalAlignment="Top" Width="247" StatusComponent="269-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -70,7 +70,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="568,507,0,0" VerticalAlignment="Top" Width="40" StatusComponent="273-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="568,507,0,0" VerticalAlignment="Top" Width="40" StatusComponent="273-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -80,7 +80,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="555,413,0,0" VerticalAlignment="Top" Width="67" StatusComponent="269-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="555,413,0,0" VerticalAlignment="Top" Width="67" StatusComponent="269-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -90,8 +90,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="625,344,0,0" VerticalAlignment="Top" Color="Air" Width="79" StatusComponent="269-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="587,456,0,0" VerticalAlignment="Top" Color="Air" Width="229" StatusComponent="269-01-MA1" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="625,344,0,0" VerticalAlignment="Top" Color="Air" Width="79" StatusComponent="269-01-MA1" d:IsLocked="True"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="587,456,0,0" VerticalAlignment="Top" Color="Air" Width="229" StatusComponent="269-01-MA1" RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -101,8 +101,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="329,568,0,0" VerticalAlignment="Top" Color="Air" Width="375" StatusComponent="269-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="215,752,0,0" VerticalAlignment="Top" Width="61" StatusComponent="292-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Air" Height="6">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="329,568,0,0" VerticalAlignment="Top" Color="Air" Width="375" StatusComponent="269-01-MA1" d:IsLocked="True"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="215,752,0,0" VerticalAlignment="Top" Width="61" StatusComponent="292-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Air" Height="6" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -112,7 +112,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="320,755,0,0" VerticalAlignment="Top" Width="489" StatusComponent="292-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="320,755,0,0" VerticalAlignment="Top" Width="489" StatusComponent="292-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -122,7 +122,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="269,710,0,0" VerticalAlignment="Top" Width="52" StatusComponent="290-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="269,710,0,0" VerticalAlignment="Top" Width="52" StatusComponent="290-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -132,7 +132,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="570,530,0,0" VerticalAlignment="Top" Width="471" StatusComponent="292-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="13">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="570,530,0,0" VerticalAlignment="Top" Width="471" StatusComponent="292-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="13" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -142,7 +142,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="801,293,0,0" VerticalAlignment="Top" Width="132" StatusComponent="292-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="801,293,0,0" VerticalAlignment="Top" Width="132" StatusComponent="292-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -152,9 +152,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:Radar HorizontalAlignment="Left" Margin="1040,235,0,0" VerticalAlignment="Top" Height="49" Width="28"/>
-        <Machines:Storage_silo HorizontalAlignment="Left" Margin="898,258,0,0" VerticalAlignment="Top" Height="210" Width="151"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="137,226,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Air" RenderTransformOrigin="0.5,0.5">
+        <Machines:Radar HorizontalAlignment="Left" Margin="1040,235,0,0" VerticalAlignment="Top" Height="49" Width="28" d:IsLocked="True"/>
+        <Machines:Storage_silo HorizontalAlignment="Left" Margin="898,258,0,0" VerticalAlignment="Top" Height="210" Width="151" d:IsLocked="True"/>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="137,226,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Air" RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
@@ -164,7 +164,7 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Rectangle HorizontalAlignment="Left" Height="2" Margin="202,754,0,0" Stroke="Black" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.5,0.5">
+        <Rectangle HorizontalAlignment="Left" Height="2" Margin="202,754,0,0" Stroke="Black" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="-1"/>
@@ -174,63 +174,63 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Machines:VS_Airlock HorizontalAlignment="Left" Margin="258,237,0,0" VerticalAlignment="Top" Height="72" Width="75"/>
-        <Machines:VS_Airlock HorizontalAlignment="Left" Margin="258,635,0,0" VerticalAlignment="Top" Height="72" Width="75"/>
-        <Machines:VS_Airlock HorizontalAlignment="Left" Margin="560,437,0,0" VerticalAlignment="Top" Height="59" Width="58"/>
-        <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Left" Margin="905,479,0,0" VerticalAlignment="Top" Height="160" Width="155"/>
-        <Machines:VT_BlowerCentrifuge_up HorizontalAlignment="Left" Margin="563,331,0,0" VerticalAlignment="Top" Height="71" Width="65"/>
-        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="264,713,0,0" VerticalAlignment="Top" Height="69" Width="69"/>
-        <Machines:Waste HorizontalAlignment="Left" Margin="566,507,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
+        <Machines:VS_Airlock HorizontalAlignment="Left" Margin="258,237,0,0" VerticalAlignment="Top" Height="72" Width="75" d:IsLocked="True"/>
+        <Machines:VS_Airlock HorizontalAlignment="Left" Margin="258,635,0,0" VerticalAlignment="Top" Height="72" Width="75" d:IsLocked="True"/>
+        <Machines:VS_Airlock HorizontalAlignment="Left" Margin="560,437,0,0" VerticalAlignment="Top" Height="59" Width="58" d:IsLocked="True"/>
+        <Separation:SA_Elutriator HorizontalAlignment="Left" Margin="248,340,0,235" Width="96" d:IsLocked="True"/>
+        <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Left" Margin="905,479,0,0" VerticalAlignment="Top" Height="160" Width="155" d:IsLocked="True"/>
+        <Machines:VT_BlowerCentrifuge_up HorizontalAlignment="Left" Margin="563,331,0,0" VerticalAlignment="Top" Height="71" Width="65" d:IsLocked="True"/>
+        <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="264,713,0,0" VerticalAlignment="Top" Height="69" Width="69" d:IsLocked="True"/>
+        <Machines:Waste HorizontalAlignment="Left" Margin="566,507,0,0" VerticalAlignment="Top" Height="46" Width="44" d:IsLocked="True"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="1070,610,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="322-01-MA1" 
-            JumpToLabel="324-01-MA1"/>
+            JumpToLabel="324-01-MA1" d:IsLocked="True"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="118,91,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="268-01-MA1" 
-            JumpToLabel="234-01-MA1"/>
+            JumpToLabel="234-01-MA1" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="1070,310,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="320-01-MA1"/>
+            ComponentName="320-01-MA1" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="1070,240,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="320-41-LT1"/>
+            ComponentName="320-41-LT1" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="1070,495,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="322-01-MA1"/>
+            ComponentName="322-01-MA1" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="337,210,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="268-01-MA1"/>
+            ComponentName="268-01-MA1" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="147,210,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="268-21-CV1"/>
+            ComponentName="268-21-CV1" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="470,310,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="269-01-MA1"/>
+            ComponentName="269-01-MA1" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="470,435,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="273-01-MA1"/>
+            ComponentName="273-01-MA1" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="470,502,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="273-01-LP1"/>
+            ComponentName="273-01-LP1" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="167,642,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="290-01-MA1"/>
+            ComponentName="290-01-MA1" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="332,697,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="292-01-MA1"/>
-        <Separation:SA_Elutriator HorizontalAlignment="Left" Margin="248,340,0,235" Width="96"/>
+            ComponentName="292-01-MA1" d:IsLocked="True"/>
     </Grid>
 </UserControl>
