--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/PlantView.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/PlantView.xaml
@@ -42,7 +42,7 @@
         <Labels:DeviceLabel x:Name="S110_Copy4" HorizontalAlignment="Left" Margin="1176,431,0,0" VerticalAlignment="Top" ComponentName="S910"/>
         <Labels:GroupLabel HorizontalAlignment="Left" Margin="846,510,0,0" VerticalAlignment="Top" GroupName="320"/>
         <Labels:GroupLabel HorizontalAlignment="Left" Margin="450,510,0,0" VerticalAlignment="Top" GroupName="050"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="380,510,0,0" VerticalAlignment="Top" GroupName="018"/>
+        <Labels:GroupLabel HorizontalAlignment="Left" Margin="380,510,0,0" VerticalAlignment="Top" GroupName="018" Loaded="GroupLabel_Loaded"/>
         <Labels:GroupLabel HorizontalAlignment="Left" Margin="575,510,0,0" VerticalAlignment="Top" GroupName="140"/>
         <Labels:GroupLabel HorizontalAlignment="Left" Margin="916,510,0,0" VerticalAlignment="Top" GroupName="330"/>
         <Labels:GroupLabel HorizontalAlignment="Left" Margin="1005,510,0,0" VerticalAlignment="Top" GroupName="420"/>
