--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/D880.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/D880.xaml
@@ -9,21 +9,21 @@
              xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D880" 
              mc:Ignorable="d" 
              Height="500" Width="600" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid>
-        <Separation:FKS_FlakesSorter HorizontalAlignment="Center" Margin="0,52,0,52" Width="430" Loaded="FKS_FlakesSorter_Loaded"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="240,70,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="240,134,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSH" />
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="222,207,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSL"/>
+    <Grid d:IsLocked="True">
+        <Separation:FKS_FlakesSorter HorizontalAlignment="Center" Margin="0,52,0,52" Width="430" Loaded="FKS_FlakesSorter_Loaded" d:IsLocked="True"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="240,70,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA" d:IsLocked="True"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="240,134,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSH" d:IsLocked="True" />
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="222,207,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSL" d:IsLocked="True"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="446,70,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA" d:IsLocked="True"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="446,134,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSH" d:IsLocked="True" />
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="428,207,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSL" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
          Margin="149,26,0,0" 
          VerticalAlignment="Top" 
-         ComponentName="880-61-LEV"/>
+         ComponentName="880-61-LEV" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="357,26,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="880-62-LEV"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="446,70,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="446,134,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSH" />
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="428,207,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSL"/>
+            ComponentName="880-62-LEV" d:IsLocked="True"/>
     </Grid>
 </UserControl>
