--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P371.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P371.xaml
@@ -8,8 +8,8 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="668,363,0,0" VerticalAlignment="Top" Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV3" >
+    <Grid d:IsLocked="True">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="668,363,0,0" VerticalAlignment="Top" Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV3" d:IsLocked="True" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -19,7 +19,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="653,555,0,0" VerticalAlignment="Top" Width="104" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="653,555,0,0" VerticalAlignment="Top" Width="104" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -29,7 +29,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="672,371,0,0" VerticalAlignment="Top" Width="48" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV2">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="672,371,0,0" VerticalAlignment="Top" Width="48" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV2" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -39,7 +39,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="659,341,0,0" VerticalAlignment="Top" Width="110" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="659,341,0,0" VerticalAlignment="Top" Width="110" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -49,11 +49,11 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="643,616,0,0" VerticalAlignment="Top" Width="144" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-22-CV3" Height="12"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="643,283,0,0" VerticalAlignment="Top" Width="72" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV1" Height="12"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="633,345,0,0" VerticalAlignment="Top" Width="66" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV2" Height="10"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="703,605,0,0" VerticalAlignment="Top" Width="84" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="688,217,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="643,616,0,0" VerticalAlignment="Top" Width="144" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-22-CV3" Height="12" d:IsLocked="True"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="643,283,0,0" VerticalAlignment="Top" Width="72" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV1" Height="12" d:IsLocked="True"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="633,345,0,0" VerticalAlignment="Top" Width="66" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV2" Height="10" d:IsLocked="True"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="703,605,0,0" VerticalAlignment="Top" Width="84" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1" d:IsLocked="True"/>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="688,217,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" d:IsLocked="True">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -63,8 +63,8 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:Chemical_dosing HorizontalAlignment="Left" Margin="633,393,0,0" VerticalAlignment="Top" Height="130" Width="144"/>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="617,255,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+        <Machines:Chemical_dosing HorizontalAlignment="Left" Margin="633,393,0,0" VerticalAlignment="Top" Height="130" Width="144" d:IsLocked="True"/>
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="617,255,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals" d:IsLocked="True">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="1"/>
@@ -74,7 +74,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="617,315,0,0" VerticalAlignment="Top" Height="72" Width="52" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="617,315,0,0" VerticalAlignment="Top" Height="72" Width="52" RenderTransformOrigin="0.5,0.5" Color="Chemicals" d:IsLocked="True">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="1"/>
@@ -84,7 +84,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="617,588,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="617,588,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals" d:IsLocked="True">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="1"/>
@@ -94,31 +94,31 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Labels:JumpLabel HorizontalAlignment="Left" Margin="783,578,0,0" VerticalAlignment="Top" JumpFromLabel="371-ACS" JumpToLabel="370-41-LT1"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" Margin="783,578,0,0" VerticalAlignment="Top" JumpFromLabel="371-ACS" JumpToLabel="370-41-LT1" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
 				Margin="519,265,0,0" 
 				VerticalAlignment="Top" 
-				ComponentName="371-21-CV1"/>
+				ComponentName="371-21-CV1" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
 				Margin="519,325,0,0" 
 				VerticalAlignment="Top" 
-				ComponentName="371-21-CV2"/>
+				ComponentName="371-21-CV2" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
 				Margin="693,189,0,0" 
 				VerticalAlignment="Top" 
-				ComponentName="371-21-CV3"/>
+				ComponentName="371-21-CV3" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
 				Margin="519,427,0,0" 
 				VerticalAlignment="Top" 
-				ComponentName="371-41-WT1"/>
+				ComponentName="371-41-WT1" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
 				Margin="519,487,0,0" 
 				VerticalAlignment="Top" 
-				ComponentName="371-ACS" RenderTransformOrigin="0.5,0.52"/>
+				ComponentName="371-ACS" RenderTransformOrigin="0.5,0.52" d:IsLocked="True"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="519,598,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="371-22-CV3"/>
+            ComponentName="371-22-CV3" d:IsLocked="True"/>
 
     </Grid>
 </UserControl>
